[gd_scene load_steps=3 format=3 uid="uid://dnmihxjpuf5ix"]

[ext_resource type="Theme" uid="uid://df2r57b2stnof" path="res://themes/ui.tres" id="1_p005l"]
[ext_resource type="Script" uid="uid://d0rn43lca8fop" path="res://objects/ui/game_type_popup/game_type_popup.gd" id="1_vcda6"]

[node name="GameTypePopup" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p005l")
script = ExtResource("1_vcda6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.298039)

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"LightPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "GAME_START_PROMPT"
horizontal_alignment = 1

[node name="ButtonQuickGame" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "GAME_START_QUICK_GAME"

[node name="ButtonNormalGame" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "GAME_START_NORMAL_GAME"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonQuickGame" to="." method="_on_button_quick_game_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonNormalGame" to="." method="_on_button_normal_game_pressed"]
